x/pkgsite: Fix the width of Subdirectories table
The subdirectories table is overflowing for package
k8s.io/kubernetes hence adding a maximum width
to the table.

Fixes golang/go#40946

--- a/content/static/css/stylesheet.css
+++ b/content/static/css/stylesheet.css
@@ -1357,6 +1357,7 @@ table.Directories {
   padding: 0.75rem 0;
   border-bottom: 0.0625rem solid var(--gray-8);
   padding-right: 1rem;
+  max-width: 30rem;
 }
 .Directories th {
   text-align: left;
